# sorhta-freertos

./: .gitignore  CMakeLists.txt  build.sh
FreeRTOS-Kernel/include/: print.h
FreeRTOS-Kernel/portable/GCC/ARM_CA53_64_BIT/: port.c  portASM.S  portmacro.h  print.c
FreeRTOS-Kernel/portable/GCC/ARM_CA7_STM32MP15/: port.c  portASM.S  portmacro.h
app/: heap_4.c  main.c
config/: FreeRTOSConfig.h
startup/: SystemInit.c  linker_symbols.c  s32g3_cortex_a53.ld  startup_s32g3_a53.c  startup_stm32mp15xx_ca7.c  stm32mp15xx_ca7.ld  vport_setup0.c
